--- a/src/app/admin/location/lactiontable/lactiontable.component.html
+++ b/src/app/admin/location/lactiontable/lactiontable.component.html
@@ -19,66 +19,41 @@
                         </li>
                         <li class="tbl-search-box">
                           <label for="search-input"><i class="material-icons search-icon">search</i></label>
-                          <input placeholder="Search" type="text" #filter class="browser-default search-field"
+                          <input placeholder="Search" type="text" [(ngModel)]="keyword" (keyup)="applyFilter($event)" class="browser-default search-field"
                             aria-label="Search box">
+                          <!-- <input placeholder="Search" type="text" #filter class="browser-default search-field"
+                            aria-label="Search box"> -->
                         </li>
                         <li class="tbl-header-btn">
                           <div class="m-l-10" matTooltip="ADD">
-                            <button mat-mini-fab color="primary" >
+                            <button (click)="addcontent('Add',this.pagename)" mat-mini-fab color="primary" >
                               <mat-icon class="col-white">add</mat-icon>
                             </button>
                           </div>
                         </li>
-                        <li class="tbl-header-btn">
-                          <div class="m-l-10" matTooltip="REFRESH">
-                            <button mat-mini-fab color="primary" >
-                              <mat-icon class="col-white">refresh</mat-icon>
-                            </button>
-                          </div>
-                        </li>
+                      
                        
                       </ul>
                     </div>
-                    <div class="col-4">
-                      <ul class="tbl-export-btn">
-                        <!-- <li>
-                          <div class="export-button m-l-10" matTooltip="XLSX">
-                            <img src="assets/images/icons/xlsx.png" alt=""
-                              (click)="exporter.exportTable('xlsx', {fileName:'assets-list', sheet: 'sheet1'})" />
-                          </div>
-                        </li>
-                        <li>
-                          <div class="export-button m-l-10" matTooltip="CSV">
-                            <img src="assets/images/icons/csv.png" alt="" (click)="exporter.exportTable('csv')" />
-                          </div>
-                        </li>
-                        <li>
-                          <div class="export-button m-l-10" matTooltip="JSON">
-                            <img src="assets/images/icons/json.png" alt="" (click)="exporter.exportTable('json')" />
-                          </div>
-                        </li>
-                        <li>
-                          <div class="export-button m-l-10" matTooltip="TXT">
-                            <img src="assets/images/icons/txt.png" alt=""  />
-                          </div>
-                        </li> -->
-                      </ul>
-                    </div>
+                 
                   </div>
                 </div>
-                <mat-table  matTableExporter [dataSource]="this.tabledata" matSort class="mat-cell"
-                 >
+                <div *ngIf="this.tabledata!=undefined">
+                <mat-table  matTableExporter [dataSource]="datasource" matSort class="mat-cell">
                
                   <ng-container  [matColumnDef]="column" *ngFor="let column of  objectKeys(tableheader)" >
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>{{tableheader[column]|titlecase}}</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>{{tableheader[column]}}</mat-header-cell>
                     <mat-cell *matCellDef="let row">
                       <div *ngIf="isArray(row[column]); else elseBlock " class="d-flex">
                         <div *ngFor="let action of row[column];let i = index" >
                           <button *ngIf="row.Actions[i]=='Edit'" mat-icon-button (click)="Opendailogbox(row,action)">
-                            <mat-icon>{{row.actionIcon[i]}}</mat-icon>
+                            <!-- <mat-icon>{{row.actionIcon[i]}}</mat-icon> -->
+                            <app-feather-icons [icon]="'edit'" [class]="'tbl-fav-edit'"></app-feather-icons>
                           </button>
                           <button *ngIf="row.Actions[i]=='Delete'" mat-icon-button (click)="Ondelete(row,action)">
-                            <mat-icon>{{row.actionIcon[i]}}</mat-icon>
+                            <!-- <mat-icon>{{row.actionIcon[i]}}</mat-icon> -->
+                            <app-feather-icons [icon]="'trash-2'" [class]="'tbl-fav-delete'"></app-feather-icons>
+                           
                           </button>
                           
                           </div>
@@ -123,10 +98,11 @@
                   [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
                   No results
                 </div> -->
-                <!-- <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10"
+                <mat-paginator #paginator [length]="this.tabledata.length" [pageIndex]="0" [pageSize]="10"
                   [pageSizeOptions]="[5, 10, 25, 100]">
-                </mat-paginator> -->
+                </mat-paginator>
               </div>
+            </div>
             </div>
           </div>
         </div>
