--- a/src/app/admin/location/dialogs/locationdelete/locationdelete.component.html
+++ b/src/app/admin/location/dialogs/locationdelete/locationdelete.component.html
@@ -7,7 +7,7 @@
       <div mat-dialog-actions align="center" class="mb-1 text-center">
         <button mat-flat-button color="warn" (click)="onNoClick()" tabindex="-1">No</button>
         <button mat-flat-button color="primary" type="submit"
-          [mat-dialog-close]="1" (click)="onSubmit(data.actionName,data.tabledatadeatils.country_id)">Yes</button>
+          [mat-dialog-close]="1" (click)="onSubmit(data.actionName,data.tabledatadeatils.Id)">Yes</button>
        
       </div>
     </div>
