--- a/src/app/admin/location/city/city.component.html
+++ b/src/app/admin/location/city/city.component.html
@@ -1,1 +1,5 @@
-<p>city works!</p>
+<app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [Joinwith]="selectoption" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
+<div *ngIf="inload" class="tbl-spinner">
+  <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
+  </mat-progress-spinner>
+</div>
