--- a/src/app/admin/location/region/region.component.html
+++ b/src/app/admin/location/region/region.component.html
@@ -3,9 +3,9 @@
     <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
     </app-breadcrumb>
   </div> -->
-  <p>afdsf</p>
+
  
-  <app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
+  <app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [Joinwith]="selectoption" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
   <div *ngIf="inload" class="tbl-spinner">
     <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
     </mat-progress-spinner>
