--- a/src/app/admin/location/zone/zone.component.html
+++ b/src/app/admin/location/zone/zone.component.html
@@ -4,7 +4,7 @@
     </app-breadcrumb>
   </div> -->
  
-  <app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
+  <app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [Joinwith]="selectoption" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
   <div *ngIf="inload" class="tbl-spinner">
     <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
     </mat-progress-spinner>
