--- a/src/app/admin/location/locality/locality.component.html
+++ b/src/app/admin/location/locality/locality.component.html
@@ -1,5 +1,48 @@
-<app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [Joinwith]="selectoption" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable>
+
 <div *ngIf="inload" class="tbl-spinner">
   <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
   </mat-progress-spinner>
 </div>
+
+
+<section class="content ">
+  <div class="content-block">
+    <div class="block-header mt-3">
+      <!-- breadcrumb -->
+      <!-- <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
+      </app-breadcrumb> -->
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+          <div class="body">
+            <div class="responsive_table">
+              <div class="materialTableHeader">
+                <div class="row">
+                  <div class="col-8">
+                    <ul class="header-buttons-left ms-0">
+                      <li class="tbl-title">
+                        <!-- <h2>{{Titlename}}</h2> -->
+                      </li>
+                      <li class="tbl-search-box">
+                        <app-datafilter></app-datafilter>
+                      </li>
+                      <li class="tbl-header-btn">
+                        <app-addbutton  [action]="this.AddAction" (OnAdd)="addItem($event)"></app-addbutton>
+                     
+                      </li>
+                    
+                     
+                    </ul>
+                  </div>
+               
+                </div>
+              </div>
+              <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="countryheader"></app-datatable>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
