--- a/src/app/admin/location/country/country.component.html
+++ b/src/app/admin/location/country/country.component.html
@@ -1,13 +1,13 @@
 <!-- <app-lactiontable *ngIf="inload" (dataChange)="addItem($event)" [Joinwith]="selectoption" [pagename]="pagename" [selectboxdata]="this.selectboxdata" [tabledata]="dataForTable" [Titlename]="Titlename" [tableheader]="countryheader"></app-lactiontable> -->
-<div *ngIf="inload" class="tbl-spinner">
+<!-- <div *ngIf="inload" class="tbl-spinner">
   <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
   </mat-progress-spinner>
-</div>
+</div> -->
 
 
 <section class="content ">
   <div class="content-block">
-    <div class="block-header mt-3">
+    <div class="block-header ">
       <!-- breadcrumb -->
       <!-- <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
       </app-breadcrumb> -->
