--- a/src/app/admin/businesses/branch/branch.component.html
+++ b/src/app/admin/businesses/branch/branch.component.html
@@ -1,13 +1,9 @@
 
-<!-- <div *ngIf="inload" class="tbl-spinner">
-    <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
-    </mat-progress-spinner>
-  </div> -->
-  
-  
-  <section class="content ">
-    <div class="content-block ">
-      <div class="block-header">
+
+
+<section class="content ">
+    <div class="content-block">
+      <div class="block-header ">
         <!-- breadcrumb -->
         <!-- <app-breadcrumb [title]="'Ambulance List'" [items]="['Ambulance']" [active_item]="'List'">
         </app-breadcrumb> -->
@@ -38,7 +34,7 @@
                  
                   </div>
                 </div>
-                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="countryheader"></app-datatable>
+                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="tableheader"></app-datatable>
             </div>
             </div>
           </div>
