--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -8,10 +8,10 @@
       <div class="form-section">
         <div class="auth-wrapper">
           <h2 class="welcome-msg"> Welcome to Cliniva </h2>
-          <p class="auth-signup-text text-muted">Need an account?<a routerLink="/authentication/signup"
+          <!-- <p class="auth-signup-text text-muted">Need an account?<a routerLink="/authentication/signup"
               class="sign-up-link">Sign Up
-            </a></p>
-          <div class="d-flex justify-content-between lbl-alert mb-3">
+            </a></p> -->
+          <!-- <div class="d-flex justify-content-between lbl-alert mb-3">
             <div>
               <button mat-raised-button color="primary" type="button" (click)="adminSet();">Admin</button>
             </div>
@@ -21,9 +21,21 @@
             <div>
               <button mat-raised-button color="warn" type="button" (click)="patientSet();">Patient</button>
             </div>
-          </div>
+          </div> -->
           <h2 class="login-title">Sign in</h2>
           <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
+                <mat-form-field appearance="outline" class="example-full-width">
+                  <mat-label>Select</mat-label>
+                  <mat-select formControlName="companyid">
+                    <mat-option *ngFor="let client of clientDetails" [value]="client.company_id">
+                      {{client.name}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
