--- a/src/app/admin/common/datatable/datatable.component.html
+++ b/src/app/admin/common/datatable/datatable.component.html
@@ -48,7 +48,9 @@
               </mat-row>
                 <mat-header-row *matHeaderRowDef="objectKeys(tableheader);sticky:true"></mat-header-row>
                 <!-- <mat-row *matRowDef="let row; columns: tableheader;"></mat-row> -->
-               
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="this.tabledata.length">No data matching the filter</td>
+                </tr>
               </mat-table>
               <!-- Loading spinner -->
               <!-- <div *ngIf="exampleDatabase.isTblLoading" class="tbl-spinner">
@@ -59,8 +61,10 @@
                 [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
                 No results
               </div> -->
-              <mat-paginator #paginator [length]="this.tabledata.length" [pageIndex]="0" [pageSize]="10"
-                [pageSizeOptions]="[5, 10, 25, 100]">
-              </mat-paginator>
+            
+             
             </div>
+            <mat-paginator #paginator [length]="this.tabledata.length" [pageIndex]="0" [pageSize]="10"
+            [pageSizeOptions]="[5, 10, 25, 100]">
+          </mat-paginator>
           
